--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -178,12 +178,12 @@ The Hammett equation relates meta and para benzoic acid substituents to the acid
 \begin{equation} log \frac{K}{K_0} = \sigma\rho \end{equation}
 
 Where $\sigma$ is a substituent constant and $\rho$ is a reaction constant. It aims to isolate the resonance and inductive effects
-of substituents from the sterics effects of a reaction. Here, we generated a combinatorial set of meta and para subsituted phenyls
-and pyridine @fig:subsituted_phenyls A with 26 functional groups that cover a wide range of electron donating and withdrawing groups.
+of substituents from the sterics effects of a reaction. Here, we generated a combinatorial set of meta and para substituted phenyls
+and pyridine @fig:substituted_phenyls A with 26 functional groups that cover a wide range of electron donating and withdrawing groups.
 (details on generating and accessing this set is in section 5.3.2 in detailed methods)
 We then calculated the ELF10 WBO for the bond attaching the functional group to the aromatic ring (highlighted green in
-Figure @fig:subsituted_phenyls A) for all functional groups which resulted in 133 (26 * 5 + 3) data points for each functional group. This allowed us to isolate the effect on a bond's WBO from remote chemical environment changes,
-defined as a change more than two bonds away, from other effects such as sterics and conformations. The resulting distributions are in figure @fig:subsituted_phenyls, B.
+Figure @fig:substituted_phenyls A) for all functional groups which resulted in 133 (26 * 5 + 3) data points for each functional group. This allowed us to isolate the effect on a bond's WBO from remote chemical environment changes,
+defined as a change more than two bonds away, from other effects such as sterics and conformations. The resulting distributions are in figure @fig:substituted_phenyls, B.
 It is interesting to note that the trend of decreasing WBOs for more electron
 donating groups are anti correlates with increasing Hammett substituent constants. In SI Figure @fig:hammett, the AM1 ELF10 WBO of the bond
 between the functional group and benzoic acid is plotted against their Hammett meta and para substituent constants (values were taken from Hansch et al. [@doi:10.1021/cr00002a004]). Functional groups
@@ -191,11 +191,11 @@ that are more electron donating will have more electron density on the bond atta
 destabilize the benzoate, increases its pKa, which corresponds to lower substituent constants.
 
 ![**AM1 ELF10 Wiberg bond orders correlate with torsion barrier heights in related molecules**
-**[A]** Systems and functional groups used in the subsituted phenyl set. The functional groups were chosen to span a large range
+**[A]** Systems and functional groups used in the substituted phenyl set. The functional groups were chosen to span a large range
 of electron donating and withdrawing groups.
 **[B]** AM1 ELF10 WBO distributions for the bond between the phenyl ring and X~1~ in different chemical environments
 **[C]** Selected QC torsion scan barrier heights vs AM1 ELF10 WBOs. These lines all had $r^2$ greater than 0.7.
-**[D]** Same as **C** but these series did not fit the lines as well ($r^2$ less than 0.7). (images/substituted_phenyls.svg){#fig:subsituted_phenyls}
+**[D]** Same as **C** but these series did not fit the lines as well ($r^2$ less than 0.7).](images/substituted_phenyls.svg){#fig:substituted_phenyls}
 
 |X~1~ | slope | standard error | $r^2$ and 95% CI |
 |---|---|---|---|
@@ -228,9 +228,9 @@ We show a representative series of torsion scan for the nitro functional group i
 increase with increasing ELF10 WBO of the bond. In addition, {@fig:sub_phenyl_qc_scan}B  shows that the Wiberg-Lowdin bond orders are anti-correlated with
 the QC torsion scan which is the same result we saw for the initial bipheynl set discussed in the previous section. We also found that the linear
 relationship between WBOs and torsion energy barrier height
-shown in Figures @fig:biphenyls, E  generalizes to the functional groups tested in this set (Figure {@fig:subsituted_phenyls} C and D). However, some
-X~1~ we tested do not fully follow the trend so we separated the lines into Figure @fig:subsituted_phenyls C for X~1~ that have lines with $r^2$ > 0.7 and
-Figure @fig:subsituted_phenyls D for X~1~ that have lines with $r^2$ < 0.7.  Table @tbl:stats lists the slopes and
+shown in Figures @fig:biphenyls, E  generalizes to the functional groups tested in this set (Figure {@fig:substituted_phenyls} C and D). However, some
+X~1~ we tested do not fully follow the trend so we separated the lines into Figure @fig:substituted_phenyls C for X~1~ that have lines with $r^2$ > 0.7 and
+Figure @fig:substituted_phenyls D for X~1~ that have lines with $r^2$ < 0.7.  Table @tbl:stats lists the slopes and
 associated statistics for the fitted lines.
 
 ![**Wiberg bond orders are anti correlated with QC torsion scans**
@@ -242,7 +242,7 @@ energy barriers change with AM1 ELF10 WBOs **[D]** Wiberg bond orders are not pe
 For most functional groups, the change in WBOs correspond to changes in torsion barrier heights (SI Figures @fig:phenyl_td_1 - @fig:phenyl_td_5).
 However, for some functional groups, the change in WBO does not fully capture the differences in torsion scans because not only do the torsion energy
 barrier heights increase, but the profile changes considerably. as shown in {@fig:sub_phenyl_qc_scan}C for urea. Interestingly, the Wiberg
-bond order scans do have the same profiles {@fig:sub_phenyl_qc_scan} D. These phenomena and the discrepancies observed in Figure @fig:subsituted_phenyls D,
+bond order scans do have the same profiles {@fig:sub_phenyl_qc_scan} D. These phenomena and the discrepancies observed in Figure @fig:substituted_phenyls D,
 are discussed in more detail in section 4.3 in the discussion.
 
 When we compare the standard deviations of WBO distributions with respect to conformation versus with respect to changes in chemical space (figure @fig:standard_deviations, pink distribution),
