--- a/content/05.discussion.md
+++ b/content/05.discussion.md
@@ -19,7 +19,7 @@ shifts in the distributions observed in figure @fig:dabrafenib_wbo_dists are als
 `should I add more figures on the kind of things I saw? SI?`{.orange}
 
 This kind of data can potentially be used to complement knowledge based molecular similarity applications which are usually
-defined locally and might not detect long range effects. In addition, since WBO is anti-correlated with Hammett resonance parameters (fig @fig:subsituted_phenyls C and D),
+defined locally and might not detect long range effects. In addition, since WBO is anti-correlated with Hammett resonance parameters (fig @fig:substituted_phenyls C and D),
 and shifts in distributions also seem to detect pKa shifts, WBOs may be useful in improving pKa predictions.
 
 We are sharing the dataset as a benchmark set for future fragmentation schemes. It is also straight forward to generate such data for molecules
@@ -38,10 +38,10 @@ attempt to provide a link between the physical understanding of molecules, a sys
 that chemists employ when thinking about molecules. Given that these quantities try to make that connection, it is not surprising that fractional bond orders
 captures important, chemical properties that can be useful in many applications, specifically force field parameterization. Indeed, In the MMP2 [@doi:10.1002/jcc.540080504],
 MM3 [@doi:10.1002/jcc.540110709] and MM4 [@doi:10/ftx79r] force fields, a Variable Electronegativity SCF derived bond order for pi-systems was used to fit bond length, bond force constants and twofold torsional
-force constants. Given the relationship we find in figure @fig:subsituted_phenyls, E, we should be able to extrapolate or interpolate torsion force constants by calculating
+force constants. Given the relationship we find in figure @fig:substituted_phenyls, E, we should be able to extrapolate or interpolate torsion force constants by calculating
 the WBO, thus avoiding running expensive QC torsion scans. The WBO comes free with an AM1-BCC [@doi:10.1002/jcc.10128] charging calculation at no extra cost, and is also now possible to calculate
 EHT electronic populations with the OFF toolkit [@url:https://github.com/openforcefield/openforcefield].
-The SMIRNOFF format provides a convenient way to add appropriate torsion terms given the data we have. For example, In figure @fig:subsituted_phenyls, E, the lines
+The SMIRNOFF format provides a convenient way to add appropriate torsion terms given the data we have. For example, In figure @fig:substituted_phenyls, E, the lines
 seem to cluster into three clusters, so we can us ChemPer [@doi:10.26434/chemrxiv.8304578.v1] to generate SMIRKS patterns to capture the chemistries in
 these clusters and interpolate the torsion force constants for the different chemical environments of those patterns. This has the potential to avoid
 many expensive QC torsion scans, specifically for bespoke parameter fitting for new chemical entities, and improve torsion parameters by including long range effects.
@@ -52,7 +52,7 @@ This can allow us to avoid running expensive, hard to converge, QC torsion scans
 ### 4.3 Relative changes in WBO is not enough to capture all characteristics of QM torsion scans
 
 The WBO is a measure of electron population overlap between atoms in a bond, so its relative changes is a good indication of
-conjugation and therefor a surrogate for torsion barrier heights (fig @fig:subsituted_phenyls, E). However, as we have shown in
+conjugation and therefor a surrogate for torsion barrier heights (fig @fig:substituted_phenyls, E). However, as we have shown in
 figure @fig:sub_phenyl_qc_scan and [Hold for SI], relative changes in WBO for the same torsion type in different chemical
 environments only capture change of scale in torsion scans, not changes in the profile (relative amplitutes,  periodicities and location of minima and maxima).
 There are several ways a torsion scan of the same torsion type in different chemical environments can change besides scale.
