--- a/content/99.si.md
+++ b/content/99.si.md
@@ -31,19 +31,24 @@ This set of molecules were selected to cover bonds of different types and multip
  **[B]** Same as **A** but for para substituents](images/SI-hammett.svg){#fig:hammett}
 
 ![**QC torsion scans and corresponding WBOs for substituted phenyl set**
-QC torsion scans, WBOs corresponding to scan and torsion barrier heights vs ELF10 WBOs for phenyl set](images/SI_substituted_phenyl_td_1.svg){#fig:phenyl_td_1}
+QC torsion scans, WBOs corresponding to scan and torsion barrier heights vs ELF10 WBOs for phenyl set. QC scan colors correspond to highlighted central
+bonds shown on the right. The molecules are labeled with their ELF10 WBOs.](images/SI_substituted_phenyl_td_1.svg){#fig:phenyl_td_1}
 
 ![**QC torsion scans and corresponding WBOs for substituted phenyl set**
-QC torsion scans, WBOs corresponding to scan and torsion barrier heights vs ELF10 WBOs for phenyl set](images/SI_substituted_phenyl_td_2.svg){#fig:phenyl_td_2}
+QC torsion scans, WBOs corresponding to scan and torsion barrier heights vs ELF10 WBOs for phenyl set. QC scan colors correspond to highlighted central
+bonds shown on the right. The molecules are labeled with their ELF10 WBOs.](images/SI_substituted_phenyl_td_2.svg){#fig:phenyl_td_2}
 
 ![**QC torsion scans and corresponding WBOs for substituted phenyl set**
-QC torsion scans, WBOs corresponding to scan and torsion barrier heights vs ELF10 WBOs for phenyl set](images/SI_substituted_phenyl_td_3.svg){#fig:phenyl_td_3}
+QC torsion scans, WBOs corresponding to scan and torsion barrier heights vs ELF10 WBOs for phenyl set. QC scan colors correspond to highlighted central
+bonds shown on the right. The molecules are labeled with their ELF10 WBOs.](images/SI_substituted_phenyl_td_3.svg){#fig:phenyl_td_3}
 
 ![**QC torsion scans and corresponding WBOs for substituted phenyl set**
-QC torsion scans, WBOs corresponding to scan and torsion barrier heights vs ELF10 WBOs for phenyl set](images/SI_substituted_phenyl_td_4.svg){#fig:phenyl_td_4}
+QC torsion scans, WBOs corresponding to scan and torsion barrier heights vs ELF10 WBOs for phenyl set. QC scan colors correspond to highlighted central
+bonds shown on the right. The molecules are labeled with their ELF10 WBOs.](images/SI_substituted_phenyl_td_4.svg){#fig:phenyl_td_4}
 
 ![**QC torsion scans and corresponding WBOs for substituted phenyl set**
-QC torsion scans, WBOs corresponding to scan and torsion barrier heights vs ELF10 WBOs for phenyl set](images/SI_substituted_phenyl_td_5.svg){#fig:phenyl_td_5}
+QC torsion scans, WBOs corresponding to scan and torsion barrier heights vs ELF10 WBOs for phenyl set. QC scan colors correspond to highlighted central
+bonds shown on the right. The molecules are labeled with their ELF10 WBOs.](images/SI_substituted_phenyl_td_5.svg){#fig:phenyl_td_5}
 
 ![**Validation set**
 All molecules used in the validation set of fragmentation schemes. The bonds are highlighted by how sensitive they are to
