Adds DGAS and minor comments

--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -47,7 +47,7 @@ Generating one dimensional QC torsion profiles are computationally expensive and
 for larger molecules and/or higher dimensional QC torsion profiles. QC calculations scale poorly with the number
 of basis sets $N$, like $O(N^M)$ where formally, $M\leq 4$ for hybrid DFT. With modern implementations, hybrid DFT scales
 asymptotically as $~N^{2.2-2.3}$ [@doi:10.1063/1.468836]. Using QCArchive data [@url:https://qcarchive.molssi.org/], we found that
-practically, hybrid DFT grows like $~N^{2.6}$ as shown for gradient evaluations in Figure @fig:b3lyp_scaling, A. To achieve good sampling to adequately fit the torsions,
+practically, hybrid DFT grows like $~N^{2.6}$ for the DZVP basis as shown for gradient evaluations in Figure @fig:b3lyp_scaling, A. To achieve good sampling to adequately fit the torsions,
 constrained geometry optimizations need to be calculated at $\leq 15^0$ intervals for a minimum of 24 constrained 
 geometry optimizations. To avoid hysteresis in the energy profile due to orthogonal degrees of freedom [@doi:10.1021/acs.jpcb.7b02320],
 methods like wavefront propagation `[hold for CITE torsiondrive paper]`{.red} are used. This adds a factor of 2D, where D is the dimension of the QC scan,
