Adds some notes on qcarchive

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -39,16 +39,15 @@ torsion angle of the central bond computed via QCArchive at B3LYP-D3(BJ) / DZVP 
 The QC torsion barrier height scales linearly with the WBO.](images/figure_3_2.svg){#fig:biphenyls}
 
 ### 3.2 The Wiberg Bond Order quantifies the electronic population overlap between two atoms and captures bond conjugation
-The Wiberg bond order (WBO) is a bond property that is calculated using orthonormalized atomic orbitals that are used
-as basis sets in semi-empirical QC methods[@doi:10.1002/jcc.20494]. Wiberg originally formulated it for the CNDO basis set [@doi:10/fvwkkh] but it can be
-easily extended to other semi-empirical QC methods such as AM1 [@doi:10.1021/ja00299a024] and PM3 [@doi:10.1002/jcc.540100208]. The WBO is a measure
-of electron density between two atoms in a bond and is given by the quadratic sum of the density matrix elements over 
+The Wiberg bond order (WBO) is a bond property that is calculated using atomic orbitals (AOs) that are used
+as basis sets in quantum and semi-empirical methods[@doi:10.1002/jcc.20494]. WBOs originally started with the CNDO formalism [@doi:10/fvwkkh], but has been extended to other semi-empirical methods such as AM1 [@doi:10.1021/ja00299a024] and PM3 [@doi:10.1002/jcc.540100208]. The WBO is a measure
+of electron density between two atoms in a bond and is given by the quadratic sum of the density matrix elements over
 occupied atomic orbitals on atoms A and B
 
 \begin{equation} W_{AB} = \sum_{\mu\in A}\sum_{\nu\in B} P^2_{\mu\nu} \end{equation}
 
-The Wiberg bond order assumes atomic orbitals (AOs) are orthogonal. In ab initio calculations, however, AOs are not
-orthogonal but the WBO can be calculated via Löwdin normalization [@doi:10.1063/1.1747632; @doi:10/bdfk5f] which is how it is calculated in Psi4 [@doi:10.1021/acs.jctc.7b00174].
+For quantum chemistry, AOs are often non-orthogonal and require normalization for the WBO to be valid. In the case of WBOs in Psi4 [@doi:10.1021/acs.jctc.7b00174] the Löwdin normalization [@doi:10.1063/1.1747632; @doi:10/bdfk5f] scheme is used.
+For the practical purposes of this paper, the Wiberg and Wiberg-Löwdin schemes are identical and will be described as "WBO"s for both semi-empirical and quantum chemistry methods.
 
 We calculated the WBO from AM1 calculations for the biphenyl series as shown in figure @fig:biphenyls A. The increase in the WBO corresponds
 to increasing conjugation and torsion energy barrier height of the bond. When the torsion energy barrier heights are plotted against
