--- a/content/06.detailed_method.md
+++ b/content/06.detailed_method.md
@@ -1,30 +1,45 @@
 ## 5. Detailed method
 
-### 5.1 QCArchive automates QC data generation and archives the resulting data
-#### 5.1.1 Submitting computations to QCArchive ensures reproducibility
+### 5.1 QCArchive data generation and archiving
 `[Hold for Daniel to write up. Please describe how QCArchive runs torsion scans and how to submit and retrieve data]`{.red}
+The MolSSI [@doi:10.1063/1.5052551] QCArchive project is a platform for computing, organizing, and sharing quantum chemistry data.
+Computations with this platform automatically record all input and output quantities ensuring the reproducibility of all computations envolved.
+In the case of computing with the MolSSI QCArchive instances, all data is automatically hosted and can be queried using the platform.
+
+#### 5.1.1 Submitting computations to QCArchive
+
+`Add scripts here?`{.red}
 
 #### 5.1.2 Details on QC and MM torsion scans.
-All QC calculations were computed at B3LYP-D3(BJ) / DZVP. This level of theory was chosen based on benchmark conducted by the
-Open Force Field consortium for fitting Parsley [@url:https://openforcefield.org/news/introducing-openforcefield-1.0/#benchmarking-parsley]
 
-Molecular mechanics torsion scans were run on QCArchive using OpenMM [@doi:10.1371/journal.pcbi.1005659] for the energy and gradient evaluations.
-The molecules were parameterized with the OpenFF parsley Force Field (v1.0.0) [@doi:10.5281/zenodo.3483227]
+All torsion scans were computed with the TorsionDrive [@url:https://github.com/lpwgroup/torsiondrive] project, which makes choices of new constrained optimizations to evaluate.
+The required constrained optimizations were then computed with the geomeTRIC [@url:https://github.com/leeping/geomeTRIC] standalone geometry optimizer interfaced to the QCEngine [url:https://github.com/molssi/qcengine] project.
+
+To ensure a fair comparison between the QC and MM torsion scans, the only change in the torsion scan procedure was to switch out the program, which evaluated the gradient at each step in the geomeTRIC optimization.
+For QC, gradients were computed at B3LYP-D3(BJ) / DZVP with the Psi4 [@doi:10.1021/acs.jctc.7b00174] program. This level of theory was chosen based on benchmark conducted by the
+Open Force Field consortium for fitting Parsley [@url:https://openforcefield.org/news/introducing-openforcefield-1.0/#benchmarking-parsley]
+For molecular mechanics, gradients were run using OpenMM [@doi:10.1371/journal.pcbi.1005659] with the OpenFF parsley Force Field (v1.0.0) [@doi:10.5281/zenodo.3483227].
 
 ### 5.2 Calculating Bond orders
+
 
 #### 5.2.1 AM1 WBO and AM1 ELF10 WBO
 To calculate AM1 ELF10 WBO, we used OpenEye's QUACPAC toolkit [@url:https://www.eyesopen.com/quacpac] (OpenEye version 2019.Apr.2). The
 ELF10 WBO comes along free after an AM1-BCC charge fitting procedure. For ELF10 WBOs generated in this paper, we used the `get_charges` function
 in the `chemi.py` module in `fragmenter` versions v0.0.3 and v0.0.4. To calculate AM1 WBO for individual conformers, we used the `OEAssignPartialCharges`
-with the `OECharges_AM1BCCSym` option from the QUACPAC toolkit for each conformer generated with Omega [@url:https://www.eyesopen.com/omega] (OpenEye versio 2019.Apr.2)
+with the `OECharges_AM1BCCSym` option from the QUACPAC toolkit for each conformer generated with Omega [@url:https://www.eyesopen.com/omega] (OpenEye version 2019.Apr.2)
 which is called for the `get_charges` function.
 For AM1 WBOs calculated to verify the results from the validation set, we generated conformers using the `generate_grid_conformer` function in the `chemi.py` module in `fragmenter`
 version v0.0.4.+25.gbb12030
 
-#### 5.2.2 Wiberg Bond Orders calculated with larger basis sets
+#### 5.2.2 Wiberg Bond Orders in Psi4
+
+Wiberg-Löwdin bond orders are calculated in Psi4 with the keyword `scf_properties: wiberg_lowdin_indices` using Psi4 version 1.3. All bond orders were computed during the torsion scan computations.
+
 `[Leave to Daniel to describe how Wiberg bond orders are calculated in QCArchive (it only
 calculates Wiberg-Löwdin so provide that formula and why the Löwdin normalization is needed)]`{.red}
+
+`[DGAS: I don't understand what else is needed here, you discuss this in section 4 already.]`{.red}
 
 ### 5.3 Datasets
 
