fixed caption and figure formatting

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -243,7 +243,7 @@ this series have WBO that are anti-correlated with their QC torsion scan. Pearso
 energy barriers change with AM1 ELF10 WBOs. In addition, the grey scan has higher energy barriers than the olive scan but its ELF10 WBO is lower.
 **[G]** Same as **[C]** but for urea. Here, the WBO scans all have the same profiles while the QC torsion scan does not.
 **[H]** Same as **D** but here the WBO scans are not always anti-correlated or not as strongly anti-correlated. The WBO does not change because
-the changes in the QC torsion scan captures spacial effects while the WBO scans capture conjugation.] (images/example_scans.svg){#fig:sub_phenyl_qc_scan}
+the changes in the QC torsion scan captures spacial effects while the WBO scans capture conjugation.](images/example_scans.svg){#fig:sub_phenyl_qc_scan}
 
 For most functional groups, the change in WBOs correspond to changes in torsion barrier heights (SI Figures @fig:phenyl_td_1 - @fig:phenyl_td_5).
 However, for some functional groups, the change in WBO does not fully capture the differences in torsion scans because not only do the torsion energy
@@ -258,11 +258,15 @@ This allows us to use the difference in ELF10 WBO of parent and fragment as a go
 ### 3.4 A simple fragmentation scheme can use the WBO to preserve the chemical environment around a torsion
 
 ![**Illustration of fragmentation scheme using WBOs**
-First, we find the rotatable bonds and calculate their ELF10 WBOs. Then, for each rotatable bond, we find the minimal fragment as described in the text. Then
-we calculate WBOs for the bonds around which the minimal fragments were generated and check if the new WBO is within the distruption threshold relative to
-the parent's WBO. If the absolute difference is greater than the disruption threshold, substituents are added, one at a time, and the WBO is recalculated.
+First, we find the rotatable bonds and calculate their ELF10 WBOs. Then, for each rotatable bond, we generate the minimal
+fragment about each rotatable bond as described in the text (section 3.4). Then
+we calculate WBOs for the bonds around which the minimal fragments were generated and check if the new WBO is within the disruption threshold relative to
+the parent's WBO. If the absolute difference is greater than the disruption threshold, substituents are added, one at a time, and the WBO is recalculated. The red circle
+illustrates such a fragment. The absolute difference of its WBO relative to the parent (0.99 in the minimal fragment vs 1.09 in the parent molecule) is greater than the disruption threshold
+of 0.03.
 The fragment continues to grow until the central bond's WBO is within the disruption threshold of the WBO of the bond in the
-parent molecule](images/fragmentation_scheme.svg){#fig:frag_scheme}
+parent molecule. The green circle illustrates the better, larger fragment that has a WBO on its central bond closer to
+the WBO on the same bond in the parent molcules](images/fragmentation_scheme.svg){#fig:frag_scheme}
 
 
 The WBO is a robust indicator of changes in torsion energy barrier heights for related torsions. Therefore, if a fragment's
@@ -275,7 +279,7 @@ in figure @fig:frag_scheme is as follows:
 3. If any of the atoms are part of a ring or functional group shown in table @tbl:fgroups, include ring and functional groups atoms to avoid ring breaking and fragmenting functional groups that contain
 more than one heteroatom.
 4. Keep ortho substitutents to the rotatable bond and the bonds directly bonded to the rotatable bond it is involved in the sterics of the torsion. This rule is slightly different than
-described in [@doi:10.1021/acs.jcim.9b00373].
+described in [@doi:10.1021/acs.jcim.9b00373] and this decision is explained below.
 5. N, O and S are capped with methyl. All other open valence atoms are capped with hydrogen.
 6. Calculate WBO for fragment.
 5. If the fragment's WBO differs by more than a user defined threshold, continue grow out one bond at a time until the
